<?xml version="1.0" encoding="UTF-8"?>
<project>
	<modelVersion>4.0.0</modelVersion>

	<groupId>Job4j</groupId>
	<artifactId>Lessons</artifactId>
	<version>1.0.0</version>
	<packaging>pom</packaging>

	<modules>
		<module>Part01-Lesson01</module>
		<module>Part01-Lesson02</module>
		<module>Part01-Lesson03</module>
		<module>Part01-Lesson04</module>
		<module>Part01-Lesson05</module>
		<module>Part01-Lesson06</module>
		
		<module>Part02-Lesson01</module>
		<module>Part02-Lesson03</module>
		<module>Part02-Lesson04</module>
		<module>Part02-Lesson05</module>
		<module>Part02-Lesson06</module>
		<module>Part02-Lesson07</module>

		<module>Part03-Lesson01</module>
		<module>Part03-Lesson02</module>
		<module>Part03-Lesson03</module>
		<module>Part03-Lesson04</module>
		<module>Part03-Lesson05</module>

		<module>Part04-Lesson01</module>
		<module>Part04-Lesson02</module>
		<module>Part04-Lesson03</module>

		<module>Part05-Lesson01</module>
		<module>Part05-Lesson02</module>
		<module>Part05-Lesson03</module>
		<module>Part05-Lesson04</module>
		<module>Part05-Lesson05</module>
		<module>Part05-Lesson06</module>
		<module>Part05-Lesson07</module>

		<module>Part06-Lesson01</module>
		<module>Part06-Lesson02</module>
		<module>Part06-Lesson03</module>
		<module>Part06-Lesson04</module>
		<module>Part06-Lesson05</module>

		<module>Part07-Lesson01</module>
		<module>Part07-Lesson02</module>
		<module>Part07-Lesson03</module>
		<module>Part07-Lesson04</module>
		<module>Part07-Lesson05</module>

		<module>Part08-Lesson01</module>
		<module>Part08-Lesson02</module>
	</modules>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>12</maven.compiler.source>
		<maven.compiler.target>12</maven.compiler.target>
	</properties>

	<dependencies>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.11</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.hamcrest</groupId>
			<artifactId>hamcrest-all</artifactId>
			<version>1.3</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>log4j</groupId>
			<artifactId>log4j</artifactId>
			<version>1.2.17</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-log4j12</artifactId>
			<version>1.7.30</version>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-checkstyle-plugin</artifactId>
				<version>3.1.1</version>
				<executions>
					<execution>
						<id>validate</id>
						<phase>validate</phase>
						<configuration>
							<configLocation>checkstyle.xml</configLocation>
							<encoding>UTF-8</encoding>
							<consoleOutput>true</consoleOutput>
							<failsOnError>true</failsOnError>
							<includeTestSourceDirectory>true</includeTestSourceDirectory>
							</configuration>
							<goals>
								<goal>check</goal>
							</goals>
					</execution>
				</executions>
				<configuration>
					<excludes>**/module-info.java</excludes>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>0.8.7</version>
				<executions>
					<execution>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
					</execution>
					<execution>
						<id>report</id>
						<phase>test</phase>
						<goals>
							<goal>report</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

</project>
